Punto de partida
Punto de partida para el proyecto, de ahora en más los commits serán acotados
y describirán su efecto. En este momento todavía queda mucho de redux para
migrar a apollo-link-state y quitar elementos heredados del template.

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -536,16 +536,16 @@
   "page500.subTitle": "error de servidor interno",
   "page500.description": "Algo salió mal. Por favor   inténtelo de nuevo.",
   "page500.backButton": "VOLVER A LA CASA",
-  "page.forgetPassTitle": "Isomórfico",
+  "page.forgetPassTitle": "WABA",
   "page.forgetPassSubTitle": "¿Se te olvidó tu contraseña?",
   "page.forgetPassDescription":
     "Introduzca su correo electrónico y le enviaremos un enlace de restablecimiento.",
   "page.sendRequest": "Enviar petición",
-  "page.resetPassTitle": "Isomórfico",
+  "page.resetPassTitle": "WABA",
   "page.resetPassSubTitle": "Restablecer la contraseña",
   "page.resetPassDescription": "Introduzca una nueva contraseña y confirme.",
   "page.resetPassSave": "Salvar",
-  "page.signInTitle": "Isomórfico",
+  "page.signInTitle": "WABA",
   "page.signInRememberMe": "Recuérdame",
   "page.signInButton": "Registrarse",
   "page.signInPreview":
@@ -554,8 +554,8 @@
   "page.signInGooglePlus": "Acceder con Google Plus",
   "page.signInAuth0": "Iniciar sesión con Auth0",
   "page.signInForgotPass": "Se te olvidó tu contraseña",
-  "page.signInCreateAccount": "Crear una cuenta Isomorphoic",
-  "page.signUpTitle": "Isomórfico",
+  "page.signInCreateAccount": "Crear una cuenta WABA",
+  "page.signUpTitle": "WABA",
   "page.signUpTermsConditions":
     "Estoy de acuerdo con los términos y condiciones",
   "page.signUpButton": "Regístrate",
@@ -645,6 +645,12 @@
   "themeSwitcher.purchase": "Compra ahora",
   "themeSwitcher.settings": "AJUSTES",
   "sidebar.frappeChart": "Frappe Charts",
+  "sidebar.discountRewards" : "Descuentos y Recompensas",
+  "sidebar.transactions": "Transacciones",
+  "sidebar.subAccounts": "Cuentas adheridas",
+  "sidebar.contactList": "Lista de contactos",
+  "sidebar.profile": "Perfil",
+  "sidebar.notifications": "Notificaciones",
   "topbar.help": "Ayuda",
   "topbar.logout": "Cerrar sesión",
   "topbar.viewAll": "Ver todo",
