--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -521,16 +521,16 @@
   "page500.subTitle": "Internal Server Error",
   "page500.description": "Something went wrong. Please try again later.",
   "page500.backButton": "BACK HOME",
-  "page.forgetPassTitle": "Isomorphic",
+  "page.forgetPassTitle": "WABA",
   "page.forgetPassSubTitle": "Forgot Password?",
   "page.forgetPassDescription":
     "Enter your email and we send you a reset link.",
   "page.sendRequest": "Send request",
-  "page.resetPassTitle": "Isomorphic",
+  "page.resetPassTitle": "WABA",
   "page.resetPassSubTitle": "Reset Password",
   "page.resetPassDescription": "Enter new password and confirm it.",
   "page.resetPassSave": "Save",
-  "page.signInTitle": "Isomorphic",
+  "page.signInTitle": "WABA",
   "page.signInRememberMe": "Remember me",
   "page.signInButton": "Sign in",
   "page.signInPreview":
@@ -539,8 +539,8 @@
   "page.signInGooglePlus": "Sign in with Google Plus",
   "page.signInAuth0": "Sign in with Auth0",
   "page.signInForgotPass": "Forgot password",
-  "page.signInCreateAccount": "Create an Isomorphoic account",
-  "page.signUpTitle": "Isomorphic",
+  "page.signInCreateAccount": "Create an WABA account",
+  "page.signUpTitle": "WABA",
   "page.signUpTermsConditions": "I agree with terms and condtions",
   "page.signUpButton": "Sign Up",
   "page.signUpFacebook": "Sign up with Facebook",
@@ -628,6 +628,12 @@
   "themeSwitcher.settings": "Settings",
   "sidebar.selectbox": "Select",
   "sidebar.frappeChart": "Frappe Charts",
+  "sidebar.discountRewards" : "Discount & Rewards",
+  "sidebar.transactions": "Transactions",
+  "sidebar.subAccounts": "Sub Accounts",
+  "sidebar.contactList": "Contact List",
+  "sidebar.profile": "Profile",
+  "sidebar.notifications": "Notifications",
   "topbar.help": "Help",
   "topbar.logout": "Logout",
   "topbar.viewAll": "View All",
