--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -1,4 +1,5 @@
 {
+  "sidebar.home": "Inicio",
   "sidebar.email": "Email",
   "sidebar.ecommerce": "Ecommerce",
   "sidebar.shop": "tienda",
@@ -651,6 +652,7 @@
   "sidebar.contactList": "Lista de contactos",
   "sidebar.profile": "Perfil",
   "sidebar.notifications": "Notificaciones",
+  "sidebar.refound": "Devoluciónes",
   "topbar.help": "Ayuda",
   "topbar.logout": "Cerrar sesión",
   "topbar.viewAll": "Ver todo",
