Change sidebar to Owner

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -629,13 +629,17 @@
   "themeSwitcher.settings": "Settings",
   "sidebar.selectbox": "Select",
   "sidebar.frappeChart": "Frappe Charts",
-  "sidebar.discountRewards" : "Discount & Rewards",
-  "sidebar.transactions": "Transactions",
-  "sidebar.subAccounts": "Sub Accounts",
-  "sidebar.contactList": "Contact List",
-  "sidebar.profile": "Profile",
+  "sidebar.kpis" : "KPIs",
+  "sidebar.configuration": "Configuration",
+  "sidebar.parameters": "Parameters",
+  "sidebar.categories": "Categories",
+  "sidebar.stores": "Stores",
+  "sidebar.list": "List",
+  "sidebar.createStore": "Create Store",
   "sidebar.notifications": "Notifications",
-  "sidebar.refound": "Refound",
+  "sidebar.blockchain": "Blockchain",
+  "sidebar.balance": "Balance",
+  "sidebar.accounts": "Accounts",
   "topbar.help": "Help",
   "topbar.logout": "Logout",
   "topbar.viewAll": "View All",
