--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -646,13 +646,17 @@
   "themeSwitcher.purchase": "Compra ahora",
   "themeSwitcher.settings": "AJUSTES",
   "sidebar.frappeChart": "Frappe Charts",
-  "sidebar.discountRewards" : "Descuentos y Recompensas",
-  "sidebar.transactions": "Transacciones",
-  "sidebar.subAccounts": "Cuentas adheridas",
-  "sidebar.contactList": "Lista de contactos",
-  "sidebar.profile": "Perfil",
+  "sidebar.kpis" : "KPIs",
+  "sidebar.configuration": "Configuración",
+  "sidebar.parameters": "Parametros",
+  "sidebar.categories": "Categorías",
+  "sidebar.stores": "Tiendas",
+  "sidebar.list": "Listado",
+  "sidebar.createStore": "Crear tienda",
   "sidebar.notifications": "Notificaciones",
-  "sidebar.refound": "Devoluciónes",
+  "sidebar.blockchain": "Blockchain",
+  "sidebar.balance": "Balances",
+  "sidebar.accounts": "Cuentas",
   "topbar.help": "Ayuda",
   "topbar.logout": "Cerrar sesión",
   "topbar.viewAll": "Ver todo",
