Change site name

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -537,16 +537,16 @@
   "page500.subTitle": "error de servidor interno",
   "page500.description": "Algo salió mal. Por favor   inténtelo de nuevo.",
   "page500.backButton": "VOLVER A LA CASA",
-  "page.forgetPassTitle": "WABA",
+  "page.forgetPassTitle": "DISCOIN",
   "page.forgetPassSubTitle": "¿Se te olvidó tu contraseña?",
   "page.forgetPassDescription":
     "Introduzca su correo electrónico y le enviaremos un enlace de restablecimiento.",
   "page.sendRequest": "Enviar petición",
-  "page.resetPassTitle": "WABA",
+  "page.resetPassTitle": "DISCOIN",
   "page.resetPassSubTitle": "Restablecer la contraseña",
   "page.resetPassDescription": "Introduzca una nueva contraseña y confirme.",
   "page.resetPassSave": "Salvar",
-  "page.signInTitle": "WABA",
+  "page.signInTitle": "DISCOIN",
   "page.signInRememberMe": "Recuérdame",
   "page.signInButton": "Registrarse",
   "page.signInPreview":
@@ -555,8 +555,8 @@
   "page.signInGooglePlus": "Acceder con Google Plus",
   "page.signInAuth0": "Iniciar sesión con Auth0",
   "page.signInForgotPass": "Se te olvidó tu contraseña",
-  "page.signInCreateAccount": "Crear una cuenta WABA",
-  "page.signUpTitle": "WABA",
+  "page.signInCreateAccount": "Crear una cuenta DISCOIN",
+  "page.signUpTitle": "DISCOIN",
   "page.signUpTermsConditions":
     "Estoy de acuerdo con los términos y condiciones",
   "page.signUpButton": "Regístrate",
