--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -522,16 +522,16 @@
   "page500.subTitle": "Internal Server Error",
   "page500.description": "Something went wrong. Please try again later.",
   "page500.backButton": "BACK HOME",
-  "page.forgetPassTitle": "WABA",
+  "page.forgetPassTitle": "DISCOIN",
   "page.forgetPassSubTitle": "Forgot Password?",
   "page.forgetPassDescription":
     "Enter your email and we send you a reset link.",
   "page.sendRequest": "Send request",
-  "page.resetPassTitle": "WABA",
+  "page.resetPassTitle": "DISCOIN",
   "page.resetPassSubTitle": "Reset Password",
   "page.resetPassDescription": "Enter new password and confirm it.",
   "page.resetPassSave": "Save",
-  "page.signInTitle": "WABA",
+  "page.signInTitle": "DISCOIN",
   "page.signInRememberMe": "Remember me",
   "page.signInButton": "Sign in",
   "page.signInPreview":
@@ -540,8 +540,8 @@
   "page.signInGooglePlus": "Sign in with Google Plus",
   "page.signInAuth0": "Sign in with Auth0",
   "page.signInForgotPass": "Forgot password",
-  "page.signInCreateAccount": "Create an WABA account",
-  "page.signUpTitle": "WABA",
+  "page.signInCreateAccount": "Create an DISCOIN account",
+  "page.signUpTitle": "DISCOIN",
   "page.signUpTermsConditions": "I agree with terms and condtions",
   "page.signUpButton": "Sign Up",
   "page.signUpFacebook": "Sign up with Facebook",
