--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -533,6 +533,7 @@
   "page.resetPassSave": "Save",
   "page.signInTitle": "DISCOIN",
   "page.signInRememberMe": "Remember me",
+  "page.isBrainKey": "Is Brain Key",
   "page.signInButton": "Sign in",
   "page.signInPreview":
     "username: demo   password: demodemo   or just click on any button.",
