--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -660,5 +660,8 @@
   "register.category": "Category",
   "register.subcategory": "Subcategory",
   "register.email.invalid": "Email not valid",
-  "register.email.empty": "Email is required"
+  "register.email.empty": "Email is required",
+  "register.name": "Business Name",
+  "register.name.empty": "Business Name is required",
+  "register.please_select" : "Choose a category"
 }
