--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -1,5 +1,5 @@
 {
-  "sidebar.home": "Home",
+  "sidebar.home": "Dashboard",
   "sidebar.email": "Email",
   "sidebar.ecommerce": "Ecommerce",
   "sidebar.shop": "Shop",
