--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -522,18 +522,18 @@
   "page500.subTitle": "Internal Server Error",
   "page500.description": "Something went wrong. Please try again later.",
   "page500.backButton": "BACK HOME",
-  "page.forgetPassTitle": "DISCOIN",
+  "page.forgetPassTitle": "DISCOIN ADMIN",
   "page.forgetPassSubTitle": "Forgot Password?",
   "page.forgetPassDescription":
     "Enter your email and we send you a reset link.",
   "page.sendRequest": "Send request",
-  "page.resetPassTitle": "DISCOIN",
+  "page.resetPassTitle": "DISCOIN ADMIN",
   "page.resetPassSubTitle": "Reset Password",
   "page.resetPassDescription": "Enter new password and confirm it.",
   "page.resetPassSave": "Save",
-  "page.signInTitle": "DISCOIN",
+  "page.signInTitle": "DISCOIN ADMIN",
   "page.signInRememberMe": "Remember me",
-  "page.isBrainKey": "Is Brain Key",
+  "page.isBrainKey": "Mnemonics?",
   "page.signInButton": "Sign in",
   "page.signInPreview":
     "username: demo   password: demodemo   or just click on any button.",
@@ -542,7 +542,7 @@
   "page.signInAuth0": "Sign in with Auth0",
   "page.signInForgotPass": "Forgot password",
   "page.signInCreateAccount": "Create an DISCOIN account",
-  "page.signUpTitle": "DISCOIN",
+  "page.signUpTitle": "DISCOIN ADMIN",
   "page.signUpTermsConditions": "I agree with terms and condtions",
   "page.signUpButton": "Sign Up",
   "page.signUpFacebook": "Sign up with Facebook",
