BugFixes, improvements, and init SubAccount Mnagement

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -648,10 +648,11 @@
   "topbar.totalPrice": "Total Price",
   "store.edit": "Edit Store",
   "store.name": "Name",
-  "sidebar.discountRewards": "Discounts and rewards",
+  "sidebar.discountRewards": "Discounts configuration",
   "sidebar.refound": "Refunds",
   "sidebar.transactions": "Transactions",
   "sidebar.subAccounts": "Sub Accounts",
+  "sidebar.findAccount": "Find Accounts",
   "sidebar.contactList": "Contact list",
   "sidebar.profile": "Profile",
   "register.email": "Email",
