--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -663,10 +663,11 @@
   "topbar.viewAll": "Ver todo",
   "topbar.viewCart": "Ver carro",
   "topbar.totalPrice": "Precio total",
-  "sidebar.discountRewards": "Descuentos y recompenzas",
+  "sidebar.discountRewards": "Configuración de descuentos",
   "sidebar.refound": "Reembolsos",
   "sidebar.transactions": "Transacciones",
   "sidebar.subAccounts": "Subcuentas",
+  "sidebar.findAccount": "Buscar Cuenta",
   "sidebar.contactList": "Lista de contactos",
   "sidebar.profile": "Perfil",
   "register.bussines": "Register bussines",
