--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -652,6 +652,7 @@
   "sidebar.refound": "Refunds",
   "sidebar.transactions": "Transactions",
   "sidebar.subAccounts": "Sub Accounts",
+  "sidebar.subaccounts_title": "Sub Accounts List",
   "sidebar.findAccount": "Find Accounts",
   "sidebar.contactList": "Contact list",
   "sidebar.profile": "Profile",
