Basic state manage in category modal

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -586,5 +586,12 @@
   "register.email.empty": "Email is required",
   "register.name": "Business Name",
   "register.name.empty": "Business Name is required",
-  "register.please_select": "Choose a category"
+  "register.please_select": "Choose a category",
+  "Name": "Name",
+  "Description": "Description",
+  "Parent Category": "Parent Category",
+  "Discount": "Discount",
+  "Add Category": "Add Category",
+  "Edit Category": "Edit Category",
+  "None": "None"
 }
