Change menu text

--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -554,7 +554,7 @@
   "sidebar.parameters": "Parameters",
   "sidebar.categories": "Categories",
   "sidebar.stores": "Stores",
-  "sidebar.list": "List",
+  "sidebar.list": "Stores List",
   "sidebar.createStore": "Create Store",
   "sidebar.notifications": "Notifications",
   "sidebar.blockchain": "Blockchain",
