--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -554,7 +554,7 @@
   "sidebar.parameters": "Parametros",
   "sidebar.categories": "Categorías",
   "sidebar.stores": "Tiendas",
-  "sidebar.list": "Listado",
+  "sidebar.list": "Tiendas",
   "sidebar.createStore": "Crear tienda",
   "sidebar.notifications": "Notificaciones",
   "sidebar.blockchain": "Blockchain",
