--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -600,5 +600,6 @@
   "filter.storeName": "Store name",
   "filter.category": "Category",
   "filter.subcategory": "Subcategory",
-  "filter.overdraft": "Overdraft only"
+  "filter.overdraft": "Overdraft only",
+  "intlselector": "Change language"
 }
