--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -605,7 +605,14 @@
   "discoin.acceptedRatio": "Relación aceptado/recibido",
   "discoin.rewardAndRefund": "Recompensa y reembolso",
   "discoint.overdraftAvailable": "Crédito disponible",
-  "discoin.acceptAvailableOverdraft": "¿Desea aceptar el crédito disponible?"
-
-
+  "discoin.acceptAvailableOverdraft": "¿Desea aceptar el crédito disponible?",
+  "refund.forceSearch": "Forzar búsqueda",
+  "refund.searchCustomer": "Buscar cliente",
+  "refund.refound": "Recompensar",
+  "refund.acceptDiscount": "Aceptar descuento",
+  "refund.customers": "Clientes",
+  "refund.refoundTo": "Recompensar a {name}",
+  "refund.amount": "Cantidad",
+  "refund.percentage": "Porcentaje",
+  "refund.invoice": "Factura"
 }
