Edit store Intl

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -614,5 +614,28 @@
   "refund.refoundTo": "Recompensar a {name}",
   "refund.amount": "Cantidad",
   "refund.percentage": "Porcentaje",
-  "refund.invoice": "Factura"
+  "refund.invoice": "Factura",
+  "profile.name": "Nombre",
+  "profile.email": "Correo electrónico",
+  "profile.telephone": "Teléfono",
+  "profile.address": "Dirección",
+  "profile.description": "Descripción",
+  "profile.category": "Categoría",
+  "profile.subcategory": "Subcategoría",
+  "profile.pleaseSelect": "Seleccione una",
+  "profile.location": "Ubicación",
+  "profile.image": "Imágen",
+  "profile.rates": "Porcentajes",
+  "profile.saveStore": "Guardar cambios",
+  "profile.reward": "Reembolso",
+  "profile.discount": "Descuento",
+  "profile.type": "Tipo",
+  "profile.day-mon": "Lun",
+  "profile.day-tue": "Mar",
+  "profile.day-wed": "Mie",
+  "profile.day-thu": "Jue",
+  "profile.day-fri": "Vie",
+  "profile.day-sat": "Sab",
+  "profile.day-sun": "Dom",
+  "profile.edit": "Editar tienda"
 }
