--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -618,6 +618,7 @@
   "refund.refoundTo": "Refound To {name}",
   "refund.amount": "Amount",
   "refund.percentage": "Percentage",
-  "refund.invoice": "Invoice"
+  "refund.invoice": "Invoice",
+  "profile.minimumDiscount": "(Minimum Discount: {discount})"
 
 }
