Intl: sub-accounts page, and child components

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -638,5 +638,30 @@
   "profile.day-sat": "Sab",
   "profile.day-sun": "Dom",
   "profile.edit": "Editar tienda",
-  "profile.minimumDiscount": "(Descuento mínimo: {discount})"
+  "profile.minimumDiscount": "(Descuento mínimo: {discount})",
+  "subaccounts.empty": "Todavía no hay ninguna subcuenta asociada.",
+  "subaccounts.addSubaccount": "Agregar subcuenta",
+  "subaccounts.emptySearch": "No se encontraron usuarios con su búsqueda.",
+  "subaccounts.searchUser": "Buscar usuarios",
+  "subaccounts.searchInProgress": "Búsqueda en progreso.",
+  "subaccounts.search": "Búsqueda.",
+  "subaccounts.minumumChar": "Ingrese al menos un caracter",
+  "subaccounts.validationErrorTitle": "Verifique valores ingresados",
+  "subaccounts.validationErrorContent": "El monto debe ser mayor a cero, la fecha de inicio debe ser mayor al dia de hoy y mayor a la fecha de cierre.",
+  "subaccounts.authorizeSubaccount": "Autorizar subcuenta: {name}",
+  "subaccounts.authorizeSubaccountSuccess": "Autorizar subcuenta",
+  "subaccounts.dailyLimit": "Límite diario",
+  "subaccounts.enabledSince": "Habilitado desde",
+  "subaccounts.fromNow": "Desde ahora",
+  "subaccounts.until": "Hasta",
+  "subaccounts.genericError": "Ha ocurrido un error",
+  "subaccounts.succesLimit": "El límite diario de subcuenta fue autorizado satisfactoriamente.",
+  "subaccounts.addConfirm": "Confirmar autorización de subcuenta",
+  "subaccounts.now": "ahora",
+  "subaccounts.authResume": "Va a autorizar a {name} a retirar diariamente DSC {amount} desde {since} hasta {until}",
+  "add": "Agregar",
+  "subaccounts.changeAmount": "Cambiar límite diario",
+  "subaccounts.withdrawn": "Retirado en este período",
+  "subaccounts.allocateCredit": "Allocate pre-arranged credit"
+
 }
