--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -451,15 +451,15 @@
   "page500.subTitle": "Internal Server Error",
   "page500.description": "Something went wrong. Please try again later.",
   "page500.backButton": "BACK HOME",
-  "page.forgetPassTitle": "DISCOIN Business",
+  "page.forgetPassTitle": "DISCOIN",
   "page.forgetPassSubTitle": "Forgot Password?",
   "page.forgetPassDescription": "Enter your email and we send you a reset link.",
   "page.sendRequest": "Send request",
-  "page.resetPassTitle": "DISCOIN Business",
+  "page.resetPassTitle": "DISCOIN",
   "page.resetPassSubTitle": "Reset Password",
   "page.resetPassDescription": "Enter new password and confirm it.",
   "page.resetPassSave": "Save",
-  "page.signInTitle": "DISCOIN Business",
+  "page.signInTitle": "DISCOIN",
   "page.signInRememberMe": "Remember me",
   "page.isBrainKey": "Mnemonics?",
   "page.signInButton": "Sign in",
@@ -469,7 +469,7 @@
   "page.signInAuth0": "Sign in with Auth0",
   "page.signInForgotPass": "Forgot password",
   "page.signInCreateAccount": "Create an DISCOIN account",
-  "page.signUpTitle": "DISCOIN Business",
+  "page.signUpTitle": "DISCOIN",
   "page.signUpTermsConditions": "I agree with terms and condtions",
   "page.signUpButton": "Sign Up",
   "page.signUpFacebook": "Sign up with Facebook",
