--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -463,7 +463,7 @@
   "page.signInTitle": "DISCOIN",
   "page.signInRememberMe": "Recuérdame",
   "page.isBrainKey": "Es clave de palabaras",
-  "page.signInButton": "Registrarse",
+  "page.signInButton": "Ingresar",
   "page.signInPreview": "nombre de usuario  demo   contraseña  demodemo   o simplemente haga clic en cualquier botón.",
   "page.signInFacebook": "Iniciar sesión usando Facebook",
   "page.signInGooglePlus": "Acceder con Google Plus",
@@ -573,13 +573,30 @@
   "sidebar.findAccount": "Buscar Cuenta",
   "sidebar.contactList": "Lista de contactos",
   "sidebar.profile": "Perfil",
-  "register.bussines": "Register bussines",
+  "register.bussines": "Registar comercio",
+  "register.name": "Nombre",
+  "register.name.empty": "El nombre es requerido",
   "register.account_name": "Nombre de cuenta",
+  "register.account_name.empty": "El nombre de la cuenta es requerido",
   "register.telephone": "Teléfono",
+  "register.telephone.empty": "El número de teléfono es requerido",
   "register.category": "Categoría",
+  "register.category.empty": "Debe seleccionar una categoria",
   "register.subcategory": "Subcategoría",
+  "register.subcategory.empty": "Debe seleccionar una subcategoria",
   "register.email.invalid": "Dirección de email invialida",
   "register.email.empty": "La dirección de email es requerida",
+  "register.accountTitle": "Cuenta",
+  "register.pleaseSelect": "Seleccione una",
+  "register.next": "Siguiente",
+  "register.previous": "Anterior",
+  "register.done": "Listo",
+  "register.categoriesTitle": "Categorias",
+  "register.credentialsTitle": "Credenciales",
+  "register.brainKey": "Palabras Mnemonicas",
+  "register.wip": "Clave privada (wip)",
+  "register.brainKeyCopy": "He resguardado esta llave mnemonica",
+  "register.brainKeyMessage": "Las palabras han sido copiadas al portapapeles. Resguárdelas de manera segura!",
   "Name": "Nombre",
   "Description": "Description",
   "Parent Category": "Categoría superior",
