Remove hardcoded name and currency

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -452,15 +452,12 @@
   "page500.subTitle": "error de servidor interno",
   "page500.description": "Algo salió mal. Por favor   inténtelo de nuevo.",
   "page500.backButton": "VOLVER A LA CASA",
-  "page.forgetPassTitle": "DISCOIN",
   "page.forgetPassSubTitle": "¿Se te olvidó tu contraseña?",
   "page.forgetPassDescription": "Introduzca su correo electrónico y le enviaremos un enlace de restablecimiento.",
   "page.sendRequest": "Enviar petición",
-  "page.resetPassTitle": "DISCOIN",
   "page.resetPassSubTitle": "Restablecer la contraseña",
   "page.resetPassDescription": "Introduzca una nueva contraseña y confirme.",
   "page.resetPassSave": "Salvar",
-  "page.signInTitle": "DISCOIN",
   "page.signInRememberMe": "Recuérdame",
   "page.isBrainKey": "Es clave de palabaras",
   "page.signInButton": "Ingresar",
@@ -469,8 +466,7 @@
   "page.signInGooglePlus": "Acceder con Google Plus",
   "page.signInAuth0": "Iniciar sesión con Auth0",
   "page.signInForgotPass": "Se te olvidó tu contraseña",
-  "page.signInCreateAccount": "Crear una cuenta DISCOIN",
-  "page.signUpTitle": "DISCOIN",
+  "page.signInCreateAccount": "Crear una cuenta",
   "page.signUpTermsConditions": "Estoy de acuerdo con los términos y condiciones",
   "page.signUpButton": "Regístrate",
   "page.signUpFacebook": "Registrate con Facebook",
@@ -612,17 +608,17 @@
   "filter.subcategory": "Subcategoría",
   "filter.overdraft": "Tiene descubierto",
   "intlselector": "Cambiar idioma",
-  "discoin.overdraftQuestion": "Tienes un crédito de DSC{value}. ¿Quieres aceptarlo?",
+  "dashboard.overdraftQuestion": "Tienes un crédito de {symbol}{value}. ¿Quieres aceptarlo?",
   "apply": "Aplicar",
   "ignore": "Ignorar",
-  "discoin.dashboard": "Panel de Control",
-  "discoin.balance": "Balance de Discoin",
-  "discoin.initialCredit": "Credito Inicial",
-  "discoin.endorsed": "Aprobado",
-  "discoin.acceptedRatio": "Relación aceptado/recibido",
-  "discoin.rewardAndRefund": "Recompensa y reembolso",
-  "discoint.overdraftAvailable": "Crédito disponible",
-  "discoin.acceptAvailableOverdraft": "¿Desea aceptar el crédito disponible?",
+  "dashboard.dashboard": "Panel de Control",
+  "dashboard.balance": "Balance de {currecny}",
+  "dashboard.initialCredit": "Credito Inicial",
+  "dashboard.endorsed": "Aprobado",
+  "dashboard.acceptedRatio": "Relación aceptado/recibido",
+  "dashboard.rewardAndRefund": "Recompensa y reembolso",
+  "dashboard.overdraftAvailable": "Crédito disponible",
+  "dashboard.acceptAvailableOverdraft": "¿Desea aceptar el crédito disponible?",
   "refund.forceSearch": "Forzar búsqueda",
   "refund.searchCustomer": "Buscar cliente",
   "refund.refound": "Recompensar",
@@ -675,7 +671,7 @@
   "subaccounts.succesLimit": "El límite diario de subcuenta fue autorizado satisfactoriamente.",
   "subaccounts.addConfirm": "Confirmar autorización de subcuenta",
   "subaccounts.now": "ahora",
-  "subaccounts.authResume": "Va a autorizar a {name} a retirar diariamente DSC {amount} desde {since} hasta {until}",
+  "subaccounts.authResume": "Va a autorizar a {name} a retirar diariamente {symbol} {amount} desde {since} hasta {until}",
   "add": "Agregar",
   "subaccounts.changeAmount": "Cambiar límite diario",
   "subaccounts.withdrawn": "Retirado en este período",
@@ -699,7 +695,7 @@
   "kpis.circulation": "Cantidad de Discoun en circulación",
   "kpis.dailyIssuing": "Uso diario",
   "kpis.airdrop": "Airdop utilizado",
-  "kpis.airdroped": "Discoins en airdrop",
+  "kpis.airdroped": "{currency} en airdrop",
   "kpis.amountRefered": "{amount} por Referidos",
   "kpis.amountRefund": "{amount} por Reembolsos",
   "kpis.amountWalletTx": "{amount} por Billeteras con TX",
