--- a/src/languageProvider/locales/en_US.json
+++ b/src/languageProvider/locales/en_US.json
@@ -451,15 +451,12 @@
   "page500.subTitle": "Internal Server Error",
   "page500.description": "Something went wrong. Please try again later.",
   "page500.backButton": "BACK HOME",
-  "page.forgetPassTitle": "DISCOIN",
   "page.forgetPassSubTitle": "Forgot Password?",
   "page.forgetPassDescription": "Enter your email and we send you a reset link.",
   "page.sendRequest": "Send request",
-  "page.resetPassTitle": "DISCOIN",
   "page.resetPassSubTitle": "Reset Password",
   "page.resetPassDescription": "Enter new password and confirm it.",
   "page.resetPassSave": "Save",
-  "page.signInTitle": "DISCOIN",
   "page.signInRememberMe": "Remember me",
   "page.isBrainKey": "Mnemonics?",
   "page.signInButton": "Sign in",
@@ -468,8 +465,7 @@
   "page.signInGooglePlus": "Sign in with Google Plus",
   "page.signInAuth0": "Sign in with Auth0",
   "page.signInForgotPass": "Forgot password",
-  "page.signInCreateAccount": "Create an DISCOIN account",
-  "page.signUpTitle": "DISCOIN",
+  "page.signInCreateAccount": "Create an account",
   "page.signUpTermsConditions": "I agree with terms and condtions",
   "page.signUpButton": "Sign Up",
   "page.signUpFacebook": "Sign up with Facebook",
@@ -602,14 +598,14 @@
   "filter.subcategory": "Subcategory",
   "filter.overdraft": "Overdraft only",
   "intlselector": "Change language",
-  "discoin.dashboard": "Dashboard",
-  "discoin.balance": "Discoin Balance",
-  "discoin.initialCredit": "Inicil Cretid",
-  "discoin.endorsed": "Endorsed",
-  "discoin.acceptedRatio": "Accepted / Received ratio",
-  "discoin.rewardAndRefund": "Reward & Refund",
-  "discoint.overdraftAvailable": "Credit available",
-  "discoin.acceptAvailableOverdraft": "Do you wish to accept the available overdraft?",
+  "dashboard.dashboard": "Dashboard",
+  "dashboard.balance": "{currency} Balance",
+  "dashboard.initialCredit": "Inicil Cretid",
+  "dashboard.endorsed": "Endorsed",
+  "dashboard.acceptedRatio": "Accepted / Received ratio",
+  "dashboard.rewardAndRefund": "Reward & Refund",
+  "dashboard.overdraftAvailable": "Credit available",
+  "dashboard.acceptAvailableOverdraft": "Do you wish to accept the available overdraft?",
   "refund.forceSearch": "Force Search",
   "refund.searchCustomer": "Search customer",
   "refund.refound": "Refound",
