--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -707,5 +707,32 @@
   "kpis.last30Days": "Últimos 30 días",
   "kpis.newUsers": "Usuarios nuevos",
   "kpis.newBusinesses": "Comercios nuevos",
-  "kpis.maxSupply": "Máxima emisión: {symbol}{amount}"
+  "kpis.maxSupply": "Máxima emisión: {symbol}{amount}",
+  "parameters.warnings": "Indicadores de alertas",
+  "parameters.lightGreen": "Luz verde",
+  "parameters.lightYellow": "Luz amarilla",
+  "parameters.lightRed": "Luz roja",
+  "parameters.from": "Desde",
+  "parameters.to": "Hasta",
+  "parameters.extra": "% extra",
+  "parameters.airdrop": "Airdrop",
+  "parameters.referalSystem": "Sistema de referidos",
+  "parameters.referredMax": "Cuantas veces puede referir un usuario?",
+  "parameters.referrerAmount": "Recompensa al que refiere",
+  "parameters.referredAmount": "Recompensa al referido",
+  "parameters.firstWallets": "Primeras wallets",
+  "parameters.firstWalletDownload": "Cantidad de descargas con premio",
+  "parameters.downloadReward": "Recompensa por descarga",
+  "parameters.firstTxReward": "Recompensa en primer Tx",
+  "parameters.reimbursement": "Reembloso escalonado por transacción",
+  "parameters.reimbursementFirst": "Primer escalón",
+  "parameters.reimbursementSecond": "Segundo escalón",
+  "parameters.reimbursementThird": "Third escalón",
+  "parameters.reimbursementFromTx": "Desde transacción",
+  "parameters.reimbursementToTx": "Hasta transacción",
+  "parameters.reimbursementPercentRefunded": "Reintegro porcentual a comercio y usuario",
+  "parameters.reserveFund": "Fondo de Reserva",
+  "parameters.newBusiness": "Porcentaje de cada CI a nuevo negocio",
+  "parameters.apply": "Aplicar cambios"
+
 }
