Business Categories intl

--- a/src/languageProvider/locales/es_ES.json
+++ b/src/languageProvider/locales/es_ES.json
@@ -593,16 +593,6 @@
   "register.wip": "Clave privada (wip)",
   "register.brainKeyCopy": "He resguardado esta llave mnemonica",
   "register.brainKeyMessage": "Las palabras han sido copiadas al portapapeles. Resguárdelas de manera segura!",
-  "Name": "Nombre",
-  "Description": "Description",
-  "Parent Category": "Categoría superior",
-  "Discount": "Descuento",
-  "Add Category": "Agregar Categoría",
-  "Edit Category": "Editar Categoría",
-  "None": "Ninguna",
-  "Yes": "Si",
-  "No": "No",
-  "Are you sure you want to remove this category?": "¿Está seguro de eliminar esta categoría?",
   "filter.storeName": "Nombre de tienda",
   "filter.category": "Categoría",
   "filter.subcategory": "Subcategoría",
@@ -733,6 +723,19 @@
   "parameters.reimbursementPercentRefunded": "Reintegro porcentual a comercio y usuario",
   "parameters.reserveFund": "Fondo de Reserva",
   "parameters.newBusiness": "Porcentaje de cada CI a nuevo negocio",
-  "parameters.apply": "Aplicar cambios"
-
+  "parameters.apply": "Aplicar cambios",
+  "bCategories.addNew": "Agregar nueva",
+  "bCategories.name": "Nombre",
+  "bCategories.description": "Description",
+  "bCategories.parentCategory": "Categoría superior",
+  "bCategories.discount": "Descuento",
+  "bCategories.add": "Agregar Categoría",
+  "bCategories.edit": "Editar Categoría",
+  "bCategories.none": "Ninguna",
+  "bCategories.yes": "Si",
+  "bCategories.no": "No",
+  "bCategories.confirmMsg": "¿Está seguro de eliminar esta categoría?",
+  "bCategories.delete": "Eliminar",
+  "bCategories.save": "Guardar",
+  "bCategories.cancel": "Cancelar"
 }
